--- a/HOME.html
+++ b/HOME.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>DEVELOPERS APP</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div id="heading">
+  <h1 id="head1">DEVELOPERS APP</h1>
+</div>
+  <h1 id="head2"><b>FIND DEVELOPERS </h1> <h1 id="head3">REGESTER AS DEVELOPER</h1>
+  <a href="/FIND/find.html">
+  <div id="find">
+    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg" width="90" height="90">
+    <h4 id="p1"> 1-WEB DEVELOPER<br>
+        2-APP DEVELOPERS<br>
+        3-DATA SINCE DEVELOPERS<br>
+        4-FULL STAC DECVELOPERS </h4>
+  </div>
+  </a>
+  <a href="/FIND/find.html">
+  <div id="reg">
+    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg" width="90" height="90">
+    <h4 id="p1"> 1-WEB DEVELOPER<br>
+      2-APP DEVELOPERS<br>
+      3-DATA SINCE DEVELOPERS<br>
+      4-FULL STAC DECVELOPERS </h4>
+  </div>
+  </a>
+</body>
+</html>
