--- a/HOME.html
+++ b/HOME.html
@@ -13,7 +13,7 @@
   <h1 id="head2"><b>FIND DEVELOPERS </h1> <h1 id="head3">REGESTER AS DEVELOPER</h1>
   <a href="/FIND/find.html">
   <div id="find">
-    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg" width="90" height="90">
+    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
         2-APP DEVELOPERS<br>
         3-DATA SINCE DEVELOPERS<br>
@@ -22,7 +22,7 @@
   </a>
   <a href="/FIND/find.html">
   <div id="reg">
-    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg" width="90" height="90">
+    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
       2-APP DEVELOPERS<br>
       3-DATA SINCE DEVELOPERS<br>
