--- a/HOME.html
+++ b/HOME.html
@@ -11,7 +11,7 @@
   <h1 id="head1">DEVELOPERS APP</h1>
 </div>
   <h1 id="head2"><b>FIND DEVELOPERS </h1> <h1 id="head3">REGESTER AS DEVELOPER</h1>
-  <a href="/FIND/find.html">
+  <a href="">
   <div id="find">
     <img src="/Images/f77a05b19911073bd35a3e3df608eb02.jpg">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
