--- a/HOME.html
+++ b/HOME.html
@@ -20,7 +20,7 @@
         4-FULL STAC DECVELOPERS </h4>
   </div>
   </a>
-  <a href="/FIND/find.html">
+  <a href="">
   <div id="reg">
     <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
