--- a/HOME.html
+++ b/HOME.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>DEVELOPERS APP</title>
-	<link rel="stylesheet" href="style.css">
-</head>
+	<link rel="stylesheet" href="homestyle.css">
+</head> 
 <body>
 <div id="heading">
   <h1 id="head1">DEVELOPERS APP</h1>
@@ -13,7 +13,7 @@
   <h1 id="head2"><b>FIND DEVELOPERS </h1> <h1 id="head3">REGISTER AS DEVELOPER</h1>
   <a href="">
   <div id="find">
-    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg" width="70" height="90">
+    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg" width="90" height="90">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
         2-APP DEVELOPERS<br>
         3-DATA SINCE DEVELOPERS<br>
