--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1 id="head2"><b>FIND DEVELOPERS </h1> <h1 id="head3">REGISTER AS DEVELOPER</h1>
   <a href="">
   <div id="find">
-    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg" width="90" height="90">
+    <img src="/Images/Screenshot_2023-06-29-12-51-05-890_com.whatsapp-edit.jpg" width="90" height="90">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
         2-APP DEVELOPERS<br>
         3-DATA SINCE DEVELOPERS<br>
@@ -22,7 +22,7 @@
   </a>
   <a href="">
   <div id="reg">
-    <img src="https://graph.org/file/2685cd2ef580ff93133b0.jpg" width="90" height="90">
+    <img src="/Images/Screenshot_2023-06-29-12-51-05-890_com.whatsapp-edit.jpg" width="90" height="90">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
       2-APP DEVELOPERS<br>
       3-DATA SINCE DEVELOPERS<br>
