--- a/REG/index.html
+++ b/REG/index.html
@@ -12,7 +12,7 @@
    <h3>CHOUSE YOUR PATH</h3>
    <a href="/reg/reg.html">
   <div id="reg">
-    <img id="img1" src="https://graph.org/file/9bef39a3e74b7876caad6.jpg" width="150" height="100">
+    <img id="img1" src="Images/images (1).png" width="150" height="100">
     <h4 id="p1"> 1-HyperText Markup Language (HTML)<br>
       2-Cascading Style Sheets (CSS)<br>
       3-JavaScript<br>
@@ -25,7 +25,7 @@
   </a>
   <a href="/reg/reg.html">
     <div id="reg2">
-      <img id="img2" src="https://graph.org/file/7fc8f847fe624cb768ce6.jpg" width="150" height="130">
+      <img id="img2" src="Images/images (1).png" width="150" height="130">
       <h4 id="p1"> 1-C#<br>
         2-GO<br>
         3-Java Script<br>
