--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         4-FULL STAC DECVELOPERS </h4>
   </div>
   </a>
-  <a href="/REG/index.html">
+  <a href="/REGindex.html">
   <div id="reg">
     <img src="/Images/Screenshot_2023-06-29-12-51-05-890_com.whatsapp-edit.jpg" width="90" height="90">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
