--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </a>
   <a href="/REGindex.html">
   <div id="reg">
-    <img src="/Images/Screenshot_2023-06-29-12-51-05-890_com.whatsapp-edit.jpg" width="90" height="90">
+    <img src="/Images/Kakashi.jpg" width="90" height="90">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
       2-APP DEVELOPERS<br>
       3-DATA SINCE DEVELOPERS<br>
