--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </a>
   <a href="/REGindex.html">
   <div id="reg">
-    <img src="/Images/Kakashi.jpg" width="90" height="90">
+    <img src="/Images/Kakashi.jpg" width="90px" height="90px">
     <h4 id="p1"> 1-WEB DEVELOPER<br>
       2-APP DEVELOPERS<br>
       3-DATA SINCE DEVELOPERS<br>
